# LESS-DB

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  doxyfile
.github/workflows/: ci.yml
example/database/: Database.cpp.example  Database.h.example  Layout.cpp.example
example/database/blocks/: Analog.h.example  Blocks.h.example  Buttons.h.example  Encoders.h.example  ID.h.example  LEDs.h.example  MIDI.h.example
example/memsrc/: AVR.cpp.example  Array.cpp.example
include/LESSDB/: LESSDB.h
include/lib/lessdb/: common.h  lessdb.h
src/: Arch.dox  DBMS.cpp  DBMS.h  DataTypes.h  LESSDB.cpp  LESSDB.h  Makefile  Sources.mk  lessdb.cpp
src/memsrc/: AVR.cpp  Array.cpp  MemRead.h
src/tests/: Objects.mk  Sources.mk  tests.cpp
tests/: Makefile  Sources.mk  Tests.cpp  tests-all.cpp  tests.cpp
tests/src/: CMakeLists.txt
tests/src/all/: Makefile  tests.cpp
tests/src/test/: CMakeLists.txt  test.cpp
tests/unity/: Helpers.h
